# typescript-schema-2-json

./: Cargo.toml  TypescriptSchema2JSON.js  package.json
assets/: Greeter.ts
pkg/: package.json  typescript_schema_2_json.d.ts  typescript_schema_2_json.js  typescript_schema_2_json_bg.wasm  typescript_schema_2_json_bg.wasm.d.ts
src/: lib.rs
