[package]
name = "typescript-schema_2_json"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
regex-lite = "0.1.0"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
