[package]
name = "typescript-schema-2-json"
version = "0.1.0"
authors = ["Jose Polaco <polacojose@gmail.com>"]
edition = "2021"
description = "Prototype library which creates simple human readable json schemas for typescript files"
repository = "https://github.com/polacojose/typescript-schema-2-json"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[features]
default = ["console_error_panic_hook"]



[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies]
wasm-bindgen = "0.2.63"
regex-lite = "0.1.0"
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }
js-sys = "0.3.64"
